--- a/locales/ru.json
+++ b/locales/ru.json
@@ -80,5 +80,29 @@
   "gender_unknown": "Скрыто 👽",
   "status_vip": "VIP Участник 🌟",
   "status_regular": "Пользователь ☁️",
-  "match_tip": "💡 <i>Совет: Скажите 'Привет'!</i>"
+  "match_tip": "💡 <i>Совет: Скажите 'Привет'!</i>",
+
+  "secret_mode_start": "✍️ <b>Секретное сообщение</b>\n\nНапишите сообщение ниже. Ваша личность останется скрытой.\n<i>Введите /cancel для отмены.</i>",
+  "secret_sent_success": "✅ <b>Отправлено!</b>\nВаше секретное сообщение доставлено.",
+  "secret_received": "💌 <b>НОВОЕ СООБЩЕНИЕ!</b>\nКто-то отправил вам секретное сообщение.\nВведите /inbox, чтобы прочитать.",
+  "secret_error_self": "⚠️ Вы не можете отправить сообщение самому себе.",
+  "secret_error_busy": "⚠️ <b>Занято!</b>\nСначала завершите текущий чат (`/stop`), чтобы отправить секретное сообщение.",
+  "secret_error_txt_only": "⚠️ Пожалуйста, отправляйте только текст.",
+  "secret_cancelled": "❌ Отправка отменена.",
+  "inbox_header": "📬 <b>ВХОДЯЩИЕ (%d Сообщений)</b>\n\n",
+  "inbox_empty": "📭 <b>Входящие пусты.</b>\nНапишите <code>@OtterChatbot</code> в любом чате, чтобы ваш краш мог написать вам!",
+  "inbox_footer": "🗑 <i>Сообщения удалены с сервера после прочтения.</i>",
+  "inbox_btn_invite": "📝 Отправить секрет",
+  "inbox_article_title": "Приглашение",
+  "inbox_article_desc": "Позвольте другим отправлять вам анонимные сообщения.",
+  "inbox_menu_btn": "📬 Мои сообщения",
+
+  "busy_secret_title": "⚠️ <b>Занято</b>",
+  "busy_secret_desc": "Вы сейчас в чате/очереди. Хотите остановиться и отправить секретное сообщение?",
+  "btn_stop_and_send": "🔴 Стоп и написать",
+
+  "partner_stopped": "🔕 <b>Собеседник остановил диалог.</b>\nНапишите /search, чтобы найти нового.",
+  "chat_stopped": "🛑 <b>Вы остановили диалог.</b>",
+  "next_partner": "🔍 <b>Поиск нового собеседника...</b>",
+  "partner_stop": "🔕 <b>Собеседник остановил диалог.</b>"
 }
