--- a/locales/ru.json
+++ b/locales/ru.json
@@ -104,5 +104,15 @@
   "partner_stopped": "🔕 <b>Собеседник остановил диалог.</b>\nНапишите /search, чтобы найти нового.",
   "chat_stopped": "🛑 <b>Вы остановили диалог.</b>",
   "next_partner": "🔍 <b>Поиск нового собеседника...</b>",
-  "partner_stop": "🔕 <b>Собеседник остановил диалог.</b>"
+  "partner_stop": "🔕 <b>Собеседник остановил диалог.</b>",
+
+  "btn_peek": "🕵️ Кто это?",
+  "btn_clear_inbox": "🗑 Очистить",
+  "peek_locked": "🔒 <b>Закрыто!</b>\nКупите VIP (/vip), чтобы увидеть подсказку.",
+  "peek_result": "🕵️ <b>Подсказка:</b>\n\nПол: %s\nИмя: %s",
+  "inbox_cleared": "✅ Сообщения удалены.",
+
+  "inbox_confirm_text": "⚠️ <b>Подтверждение</b>\n\nВы уверены, что хотите удалить ВСЕ сообщения? Это действие нельзя отменить.",
+  "btn_yes": "✅ Да, удалить",
+  "btn_no": "❌ Отмена"
 }
