--- a/locales/ru.json
+++ b/locales/ru.json
@@ -114,5 +114,8 @@
 
   "inbox_confirm_text": "⚠️ <b>Подтверждение</b>\n\nВы уверены, что хотите удалить ВСЕ сообщения? Это действие нельзя отменить.",
   "btn_yes": "✅ Да, удалить",
-  "btn_no": "❌ Отмена"
+  "btn_no": "❌ Отмена",
+
+  "inbox_inline_title": "📝 Отправить секретное сообщение",
+  "inbox_inline_desc": "Нажмите здесь, чтобы отправить приглашение в этот чат."
 }
